# FerrousAlign

./: .gitignore  ADAPTIVE_ROUTING_ANALYSIS.md  ALGORITHM_REFINEMENTS.md  ALIGNMENT_ARCHITECTURE.md  ALIGNMENT_ISSUES.md  ALIGNMENT_QUICK_REFERENCE.md  AVX2_KERNEL_PORTING.md  AVX_ENHANCEMENT.md  CLAUDE.md  CODE_QUALITY_REPORT.md  CPP_RUST_GAP_ANALYSIS.md  Cargo.toml  DEBUG_SMEM.md  FUNCTIONAL_GAP_ANALYSIS.md  GAP_ANALYSIS.md  GATK4_COMPATIBILITY.md  HOTFIX_v0.7.1_SUMMARY.md  INSTRUMENTATION_GUIDE.md  LICENSE.md  NEON_OPTIMIZATION_PLAN.md  NEON_REPAIR_PLAN.md  OPTIMIZATION_REPORT.md  PANGENOME_ARCHITECTURE_PLAN.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  POSITION_DIVERGENCE_FIX_PLAN.md  PROGRESS_SUMMARY.md  README.md  REPAIR_PLAN.md  SESSION_31_BREAKTHROUGH.md  SESSION_NOTES.md  SIMD_OUTPUT_VALIDATION.md  THREADING_OPTIMIZATION_PLAN.md  TODO.md  WGS_BENCHMARKING_GUIDE.md  ZDROP_ANALYSIS.md  avx512_results.txt  benchmark_results.txt  engine_comparison_results.txt  m3_max_simd_probing_report.md  (+14 more)
.github/workflows/: perf.yml  quality.yml
benches/: align_perf.rs  bwa_mem2_comparison.rs  kbtree_benchmarks.rs  simd_benchmarks.rs  simd_engine_comparison.rs
coverage_report/html/: index.html
dev_notes/: ALIGNMENT_MODULE_CLEANUP.md  BENCHMARK_FIX_SUMMARY.md  CODE_DUPLICATION_AUDIT.md  CRITICAL_PARALLELISM_LOSS.md  PARALLELISM_ANALYSIS.md  PARALLELISM_COMPLETE.md  PARALLELISM_FIX_RESULTS.md  PHASE1_COMPLETION_SUMMARY.md  SESSION_37_NEON_PROFILING_PLAN.md  SESSION_CLEANUP_SUMMARY.md  SoA_PIPELINE_CONCORDANCE_FINDINGS.md  TEST_AND_AVX512_CLEANUP.md
documents/: 2025-12-02-BENCHMARKS.md  ARM_SVE_SME_Roadmap.md  CRITICAL_ISSUES_SUMMARY.md  Interleaved_FASTQ_and_Missing_Mates_Analysis.md  Learned_Index_SA_Lookup_Design.md  Legacy_File_Split_Plan.md  Main_Loop_Abstraction_Proposal.md  Metal_GPU_Acceleration_Design.md  Module_Reorganization_Plan.md  NPU_Seed_Filter_Design.md  PORTABLE_SIMD_VIABILITY.md  Pipeline_Flow_Diagram.md  Pipeline_Restructure_v0.8_Plan.md  README_Architecture_Docs.md  RISCV_RVV_Roadmap.md  RedesignStrategy.md  SOA_End_to_End.md  SOA_Transition.md  v0.8.0_Completion_Plan.md
scripts/: benchmark.rb  compare_sam_outputs.py  crit_extract.rb  diagnose_alignment_issue.sh  inspect_read.py  parse_benchmark_logs.rb  size_guard.sh
src/: align.rs  banded_swa.rs  banded_swa_avx2.rs  banded_swa_avx512.rs  bntseq.rs  bntseq_test.rs  bwa_index.rs  bwt.rs  bwt_test.rs  defaults.rs  fastq_reader.rs  fastq_reader_test.rs  fm_index.rs  index.rs  insert_size.rs  kseq.rs  kseq_test.rs  lib.rs  main.rs  mate_rescue.rs  mem.rs  mem_opt.rs  paired_end.rs  pairing.rs  sam_output.rs  simd.rs  simd_abstraction.rs  single_end.rs  utils.rs  utils_test.rs
src/alignment/: banded_swa.rs  banded_swa_avx2.rs  banded_swa_avx512.rs  banded_swa_sse_neon.rs  batch_extension.rs  chaining.rs  (+19 more)
test_data/: .gitignore  README.md  chrM_test.fq  create_test_queries.sh  queries_chrM.fq  test_ref.fa
tests/: align_tests.rs  alignment_helpers_test.rs  avx512_alignment_test.rs  avx512_fastpath.rs  avx512_int16_parity.rs  banded_swa_tests.rs  batch_extension_crash.rs  bio_fastq_prototype.rs  complex_alignment_tests.rs  complex_integration_test.rs  dispatch_policy.rs  integration_test.rs  intrinsics.rs  kernel_optimization_test.rs  kernel_parity.rs  kswv_soa_parity.rs  paired_end_integration_test.rs  pipeline_batch_extension.rs  reproduce_right_extension_bug.rs  soa_chaining_integration_test.rs  soa_merge_test.rs  sse_neon_parity.rs  supplementary_flag_test.rs  test_bidirectional_coordinates.rs  test_cigar_correctness.rs  test_md_tag_generation.rs  test_paired_validation.rs  test_secondary_alignment_flag.rs  verify_avx512_fix.rs  workspace_alloc.rs
(+263 files in other folders)
