[package]
name = "ferrous-align"
version = "0.5.1"
edition = "2024"

[lib]
name = "ferrous_align"
path = "src/lib.rs"

[[bin]]
name = "ferrous-align"
path = "src/main.rs"

[dependencies]
libc = "0.2"
flate2 = "1.0"
tikv-jemallocator = { version = "0.6", optional = true }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
lazy_static = "1.4.0"
bio = "2.0"
rayon = "1.10"
num_cpus = "1.16"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
crossbeam-channel = "0.5"
noodles-bgzf = "0.32"
anyhow = "1.0"

[features]
# AVX-512 support (requires nightly Rust due to unstable intrinsics)
avx512 = []
# Debug logging for comparative debugging with bwa-mem2
debug-logging = []
# Use jemalloc allocator for better memory behavior (reduced fragmentation)
jemalloc = ["tikv-jemallocator"]

[dev-dependencies]
tempfile = "3.23.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simd_benchmarks"
harness = false

[[bench]]
name = "simd_engine_comparison"
harness = false



[[bench]]
name = "bwa_mem2_comparison"
harness = false